updates for validation

--- a/gallery.html
+++ b/gallery.html
@@ -59,7 +59,7 @@
   <script src="js/header.js"></script>
 
   <!-- Main Content -->
-<main>
+  <main>
   <section class="gallery-section">
   <div class="container">
   <div class="gallery-header">
@@ -102,50 +102,10 @@
   <a href="booking.html" class="gallery-link">
     <div class="gallery-img-wrapper">
       <img src="img/dog15.jpg" alt="Finn after Puppy Package">
-      <div class="gallery-overlay">
-        <div class="gallery-overlay-content">
-          <span class="dog-name">Finn</span>
-          <span class="dog-treatment">Puppy Package</span>
-        </div>
-      </div>
-    </div>
-  </a>
-</div>
-<div class="gallery-item" data-category="teeth-brushing">
-  <a href="booking.html" class="gallery-link">
-    <div class="gallery-img-wrapper">
-      <img src="img/dog16.jpg" alt="Hazel after Teeth Brushing">
-      <div class="gallery-overlay">
-        <div class="gallery-overlay-content">
-          <span class="dog-name">Hazel</span>
-          <span class="dog-treatment">Teeth Brushing</span>
-        </div>
-      </div>
-    </div>
-  </a>
-</div>
-
-  <div class="gallery-item" data-category="nail-trim">
-    <a href="booking.html" class="gallery-link">
-      <div class="gallery-img-wrapper">
-        <img src="img/dog3.jpg" alt="Charlie after Nail Trim">
         <div class="gallery-overlay">
           <div class="gallery-overlay-content">
-            <span class="dog-name">Charlie</span>
-            <span class="dog-treatment">Nail Trim</span>
-          </div>
-        </div>
-      </div>
-    </a>
-  </div>
-  <div class="gallery-item" data-category="ear-cleaning">
-    <a href="booking.html" class="gallery-link">
-      <div class="gallery-img-wrapper">
-        <img src="img/dog4.jpg" alt="Ruby after Ear Cleaning">
-        <div class="gallery-overlay">
-          <div class="gallery-overlay-content">
-            <span class="dog-name">Ruby</span>
-            <span class="dog-treatment">Ear Cleaning</span>
+            <span class="dog-name">Finn</span>
+            <span class="dog-treatment">Puppy Package</span>
           </div>
         </div>
       </div>
@@ -154,140 +114,180 @@
   <div class="gallery-item" data-category="teeth-brushing">
     <a href="booking.html" class="gallery-link">
       <div class="gallery-img-wrapper">
-        <img src="img/dog5.jpg" alt="Milo after Teeth Brushing">
+        <img src="img/dog16.jpg" alt="Hazel after Teeth Brushing">
         <div class="gallery-overlay">
           <div class="gallery-overlay-content">
-            <span class="dog-name">Milo</span>
+            <span class="dog-name">Hazel</span>
             <span class="dog-treatment">Teeth Brushing</span>
           </div>
         </div>
       </div>
     </a>
   </div>
-  <div class="gallery-item" data-category="de-shedding">
-    <a href="booking.html" class="gallery-link">
-      <div class="gallery-img-wrapper">
-        <img src="img/dog6.jpg" alt="Bailey after De-shedding Treatment">
-        <div class="gallery-overlay">
-          <div class="gallery-overlay-content">
-            <span class="dog-name">Bailey</span>
-            <span class="dog-treatment">De-shedding Treatment</span>
-          </div>
-        </div>
-      </div>
-    </a>
-  </div>
-  <div class="gallery-item" data-category="flea-tick">
-    <a href="booking.html" class="gallery-link">
-      <div class="gallery-img-wrapper">
-        <img src="img/dog7.jpg" alt="Daisy after Flea and Tick Treatment">
-        <div class="gallery-overlay">
-          <div class="gallery-overlay-content">
-            <span class="dog-name">Daisy</span>
-            <span class="dog-treatment">Flea and Tick Treatment</span>
-          </div>
-        </div>
-      </div>
-    </a>
-  </div>
-  <div class="gallery-item" data-category="spa">
-    <a href="booking.html" class="gallery-link">
-      <div class="gallery-img-wrapper">
-        <img src="img/dog8.jpg" alt="Cooper after Spa Package">
-        <div class="gallery-overlay">
-          <div class="gallery-overlay-content">
-            <span class="dog-name">Cooper</span>
-            <span class="dog-treatment">Spa Package</span>
-          </div>
-        </div>
-      </div>
-    </a>
-  </div>
-  <div class="gallery-item" data-category="express">
-    <a href="booking.html" class="gallery-link">
-      <div class="gallery-img-wrapper">
-        <img src="img/dog9.jpg" alt="Rosie after Express Service">
-        <div class="gallery-overlay">
-          <div class="gallery-overlay-content">
-            <span class="dog-name">Rosie</span>
-            <span class="dog-treatment">Express Service</span>
-          </div>
-        </div>
-      </div>
-    </a>
-  </div>
-  <div class="gallery-item" data-category="medicated-bath">
-    <a href="booking.html" class="gallery-link">
-      <div class="gallery-img-wrapper">
-        <img src="img/dog10.jpg" alt="Archie after Medicated Bath">
-        <div class="gallery-overlay">
-          <div class="gallery-overlay-content">
-            <span class="dog-name">Archie</span>
-            <span class="dog-treatment">Medicated Bath</span>
-          </div>
-        </div>
-      </div>
-    </a>
-  </div>
-  <div class="gallery-item" data-category="special-breed">
-    <a href="booking.html" class="gallery-link">
-      <div class="gallery-img-wrapper">
-        <img src="img/dog11.jpg" alt="Maggie after Special-breed Cuts">
-        <div class="gallery-overlay">
-          <div class="gallery-overlay-content">
-            <span class="dog-name">Maggie</span>
-            <span class="dog-treatment">Special-breed Cuts</span>
-          </div>
-        </div>
-      </div>
-    </a>
-  </div>
-  <div class="gallery-item" data-category="puppy-package">
-    <a href="booking.html" class="gallery-link">
-      <div class="gallery-img-wrapper">
-        <img src="img/dog12.jpg" alt="Teddy after Puppy Package">
-        <div class="gallery-overlay">
-          <div class="gallery-overlay-content">
-            <span class="dog-name">Teddy</span>
-            <span class="dog-treatment">Puppy Package</span>
-          </div>
-        </div>
-      </div>
-    </a>
-  </div>
-  <div class="gallery-item" data-category="senior-dog">
-    <a href="booking.html" class="gallery-link">
-      <div class="gallery-img-wrapper">
-        <img src="img/dog13.jpg" alt="Oscar after Senior Dog Package">
-        <div class="gallery-overlay">
-          <div class="gallery-overlay-content">
-            <span class="dog-name">Oscar</span>
-            <span class="dog-treatment">Senior Dog Package</span>
-          </div>
-        </div>
-      </div>
-    </a>
-  </div>
-  <div class="gallery-item" data-category="full-grooming-package">
-    <a href="booking.html" class="gallery-link">
-      <div class="gallery-img-wrapper">
-        <img src="img/dog14.jpg" alt="Bella after Full Grooming Package">
-        <div class="gallery-overlay">
-          <div class="gallery-overlay-content">
-            <span class="dog-name">Bella</span>
-            <span class="dog-treatment">Full Grooming Package</span>
-          </div>
-        </div>
-      </div>
-    </a>
-  </div>
-</div>
 
-</section>
-</main>
+    <div class="gallery-item" data-category="nail-trim">
+      <a href="booking.html" class="gallery-link">
+        <div class="gallery-img-wrapper">
+          <img src="img/dog3.jpg" alt="Charlie after Nail Trim">
+          <div class="gallery-overlay">
+            <div class="gallery-overlay-content">
+              <span class="dog-name">Charlie</span>
+              <span class="dog-treatment">Nail Trim</span>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="gallery-item" data-category="ear-cleaning">
+      <a href="booking.html" class="gallery-link">
+        <div class="gallery-img-wrapper">
+          <img src="img/dog4.jpg" alt="Ruby after Ear Cleaning">
+          <div class="gallery-overlay">
+            <div class="gallery-overlay-content">
+              <span class="dog-name">Ruby</span>
+              <span class="dog-treatment">Ear Cleaning</span>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="gallery-item" data-category="teeth-brushing">
+      <a href="booking.html" class="gallery-link">
+        <div class="gallery-img-wrapper">
+          <img src="img/dog5.jpg" alt="Milo after Teeth Brushing">
+          <div class="gallery-overlay">
+            <div class="gallery-overlay-content">
+              <span class="dog-name">Milo</span>
+              <span class="dog-treatment">Teeth Brushing</span>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="gallery-item" data-category="de-shedding">
+      <a href="booking.html" class="gallery-link">
+        <div class="gallery-img-wrapper">
+          <img src="img/dog6.jpg" alt="Bailey after De-shedding Treatment">
+          <div class="gallery-overlay">
+            <div class="gallery-overlay-content">
+              <span class="dog-name">Bailey</span>
+              <span class="dog-treatment">De-shedding Treatment</span>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="gallery-item" data-category="flea-tick">
+      <a href="booking.html" class="gallery-link">
+        <div class="gallery-img-wrapper">
+          <img src="img/dog7.jpg" alt="Daisy after Flea and Tick Treatment">
+          <div class="gallery-overlay">
+            <div class="gallery-overlay-content">
+              <span class="dog-name">Daisy</span>
+              <span class="dog-treatment">Flea and Tick Treatment</span>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="gallery-item" data-category="spa">
+      <a href="booking.html" class="gallery-link">
+        <div class="gallery-img-wrapper">
+          <img src="img/dog8.jpg" alt="Cooper after Spa Package">
+          <div class="gallery-overlay">
+            <div class="gallery-overlay-content">
+              <span class="dog-name">Cooper</span>
+              <span class="dog-treatment">Spa Package</span>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="gallery-item" data-category="express">
+      <a href="booking.html" class="gallery-link">
+        <div class="gallery-img-wrapper">
+          <img src="img/dog9.jpg" alt="Rosie after Express Service">
+          <div class="gallery-overlay">
+            <div class="gallery-overlay-content">
+              <span class="dog-name">Rosie</span>
+              <span class="dog-treatment">Express Service</span>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="gallery-item" data-category="medicated-bath">
+      <a href="booking.html" class="gallery-link">
+        <div class="gallery-img-wrapper">
+          <img src="img/dog10.jpg" alt="Archie after Medicated Bath">
+          <div class="gallery-overlay">
+            <div class="gallery-overlay-content">
+              <span class="dog-name">Archie</span>
+              <span class="dog-treatment">Medicated Bath</span>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="gallery-item" data-category="special-breed">
+      <a href="booking.html" class="gallery-link">
+        <div class="gallery-img-wrapper">
+          <img src="img/dog11.jpg" alt="Maggie after Special-breed Cuts">
+          <div class="gallery-overlay">
+            <div class="gallery-overlay-content">
+              <span class="dog-name">Maggie</span>
+              <span class="dog-treatment">Special-breed Cuts</span>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="gallery-item" data-category="puppy-package">
+      <a href="booking.html" class="gallery-link">
+        <div class="gallery-img-wrapper">
+          <img src="img/dog12.jpg" alt="Teddy after Puppy Package">
+          <div class="gallery-overlay">
+            <div class="gallery-overlay-content">
+              <span class="dog-name">Teddy</span>
+              <span class="dog-treatment">Puppy Package</span>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="gallery-item" data-category="senior-dog">
+      <a href="booking.html" class="gallery-link">
+        <div class="gallery-img-wrapper">
+          <img src="img/dog13.jpg" alt="Oscar after Senior Dog Package">
+          <div class="gallery-overlay">
+            <div class="gallery-overlay-content">
+              <span class="dog-name">Oscar</span>
+              <span class="dog-treatment">Senior Dog Package</span>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="gallery-item" data-category="full-grooming-package">
+      <a href="booking.html" class="gallery-link">
+        <div class="gallery-img-wrapper">
+          <img src="img/dog14.jpg" alt="Bella after Full Grooming Package">
+          <div class="gallery-overlay">
+            <div class="gallery-overlay-content">
+              <span class="dog-name">Bella</span>
+              <span class="dog-treatment">Full Grooming Package</span>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+  </div>
+  </section>
+  </main>
 
 <!-- Footer -->
-<footer class="site-footer">
+  <footer class="site-footer">
   <div class="container">
     <div class="row footer-top">
       <div class="col-12 col-md-6 footer-col footer-col-left">
@@ -312,8 +312,6 @@
         <div class="footer-map">
           <iframe
             src="https://www.google.com/maps?q=5+Papanui+Road,+Christchurch,+New+Zealand&output=embed"
-            width="100%"
-            height="180"
             style="border:0;"
             allowfullscreen=""
             loading="lazy"
@@ -337,4 +335,6 @@
       <p class="footer-hours">Opening Hours<br>9:00AM – 5:00PM</p>
     </div>
   </div>
-</footer>
+  </footer>
+</body>
+</html>
