--- a/booking.html
+++ b/booking.html
@@ -46,7 +46,6 @@
         </div>
         <button id="close-nav" class="close-nav" aria-label="Close navigation">&times;</button>
       </div>
-
       <ul class="col-12">
         <li><a href="index.html">Home</a></li>
         <li><a href="services.html">Services</a></li>
@@ -61,7 +60,7 @@
   <script src="js/header.js"></script>
 
   <!-- Main Content -->
-<main>
+  <main>
     <section class="booking-section container">
       <div class="row">
         <!--Booking Form -->
@@ -94,7 +93,7 @@
             <div class="booking-form-row">
               <div class="booking-form-group">
                 <label for="datetime">Preferred Date &amp; Time *</label>
-                <input type="datetime-local" id="datetime" name="datetime" required ">
+                <input type="datetime-local" id="datetime" name="datetime" required>
               </div>
             </div>
             <div class="booking-form-row">
@@ -142,7 +141,7 @@
 
 
 <!-- Footer -->
-<footer class="site-footer">
+  <footer class="site-footer">
   <div class="container">
     <div class="row footer-top">
       <div class="col-12 col-md-6 footer-col footer-col-left">
@@ -167,8 +166,6 @@
         <div class="footer-map">
           <iframe
             src="https://www.google.com/maps?q=5+Papanui+Road,+Christchurch,+New+Zealand&output=embed"
-            width="100%"
-            height="180"
             style="border:0;"
             allowfullscreen=""
             loading="lazy"
@@ -192,4 +189,6 @@
       <p class="footer-hours">Opening Hours<br>9:00AM – 5:00PM</p>
     </div>
   </div>
-</footer>
+  </footer>
+</body>
+</html>
