--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/616b3ef0e6.js" crossorigin="anonymous"></script>
 </head>
-
-
 <body>
   <!-- Header -->
   <header class="header">
@@ -61,7 +59,7 @@
   <script src="js/header.js"></script>
 
   <!-- Main Content -->
-<main>
+  <main>
   <section class="enquiry-section container">
 
   <div class="row">
@@ -107,7 +105,7 @@
       <div class="map-container">
         <iframe
           src="https://www.google.com/maps?q=5+Papanui+Road,+Christchurch,+New+Zealand&output=embed"
-          width="100%" height="220" style="border:0;" allowfullscreen="" loading="lazy"
+          style="border:0;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"
           title="5 Papanui Road Christchurch NZ"></iframe>
       </div>
@@ -180,24 +178,9 @@
         </div>
       </div>
     </section>
-
-</main>
-
-
-
-
-
-
-
-
-
-
-
-
-  
-
+  </main>
 <!-- Footer -->
-<footer class="site-footer">
+  <footer class="site-footer">
   <div class="container">
     <div class="row footer-top">
       <div class="col-12 col-md-6 footer-col footer-col-left">
@@ -222,8 +205,6 @@
         <div class="footer-map">
           <iframe
             src="https://www.google.com/maps?q=5+Papanui+Road,+Christchurch,+New+Zealand&output=embed"
-            width="100%"
-            height="180"
             style="border:0;"
             allowfullscreen=""
             loading="lazy"
@@ -247,4 +228,6 @@
       <p class="footer-hours">Opening Hours<br>9:00AM – 5:00PM</p>
     </div>
   </div>
-</footer>
+  </footer>
+</body>
+</html>
