--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/616b3ef0e6.js" crossorigin="anonymous"></script>
 </head>
-
-
 <body>
   <!-- Header -->
   <header class="header">
@@ -30,7 +28,6 @@
       <div class="col-4 col-md-3 header-end">
         <span class="opening-times">Opening Hours:<br> 9:00–5:00</span>
       </div>
-
       <div class="col-2 header-hamburger">
         <button id="hamburger" aria-label="Open navigation">
           <span class="hamburger-bar"></span>
@@ -46,7 +43,6 @@
         </div>
         <button id="close-nav" class="close-nav" aria-label="Close navigation">&times;</button>
       </div>
-
       <ul class="col-12">
         <li><a class="active" href="inde">Home</a></li>
         <li><a href="services.html">Services</a></li>
@@ -59,9 +55,8 @@
     </nav>
   </header>
   <script src="js/header.js"></script>
-
   <!-- Main Content -->
-<main>
+  <main>
   <!-- Hero Section-->
   <div class="hero col-12">
     <div class="hero-image">
@@ -73,7 +68,6 @@
       <a href="booking.html" class="btn">Book Now 	&#x2794;</a>
     </div>
   </div>
-  
   <!-- Services Section -->
 <section class="services-section container">
   <h2 class="services-heading">OUR SERVICES</h2>
@@ -114,7 +108,6 @@
   </div>
 </section>
 <!-- Gift Voucher Section-->
-
 <section class="gift-vouchers-section container">
   <div class="row">
     <div class="col-12 col-md-6 gift-voucher-text">
@@ -131,7 +124,6 @@
     </div>
   </div>
 </section>
-
 <section class="enquiry-section container">
   <div class="row">
     <!-- Form -->
@@ -176,7 +168,7 @@
       <div class="map-container">
         <iframe
           src="https://www.google.com/maps?q=5+Papanui+Road,+Christchurch,+New+Zealand&output=embed"
-          width="100%" height="220" style="border:0;" allowfullscreen="" loading="lazy"
+          style="border:0;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"
           title="5 Papanui Road Christchurch NZ"></iframe>
       </div>
@@ -201,10 +193,9 @@
     </div>
   </div>
 </section>
-</main>
-
+  </main>
 <!-- Footer -->
-<footer class="site-footer">
+  <footer class="site-footer">
   <div class="container">
     <div class="row footer-top">
       <div class="col-12 col-md-6 footer-col footer-col-left">
@@ -229,8 +220,6 @@
         <div class="footer-map">
           <iframe
             src="https://www.google.com/maps?q=5+Papanui+Road,+Christchurch,+New+Zealand&output=embed"
-            width="100%"
-            height="180"
             style="border:0;"
             allowfullscreen=""
             loading="lazy"
@@ -254,4 +243,6 @@
       <p class="footer-hours">Opening Hours<br>9:00AM – 5:00PM</p>
     </div>
   </div>
-</footer>
+  </footer>
+</body>
+</html>
