--- a/services.html
+++ b/services.html
@@ -22,7 +22,7 @@
     <nav class="col-md-6 desktop-nav" aria-label="Main navigation">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a class="active"href="services.html">Services</a></li>
+        <li><a class="active" href="services.html">Services</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -59,10 +59,9 @@
     </nav>
   </header>
   <script src="js/header.js"></script>
-
   <!-- Main Content -->
-<main>
-  <!-- Services Table Section -->
+  <main>
+<!-- Services Table Section -->
 <section class="services-table-section">
   <div class="container">
     <h2 class="services-table-heading">Dog Grooming Services</h2>
@@ -164,11 +163,9 @@
     </table>
   </div>
 </section>
-
-</main>
-
+  </main>
 <!-- Footer -->
-<footer class="site-footer">
+  <footer class="site-footer">
   <div class="container">
     <div class="row footer-top">
       <div class="col-12 col-md-6 footer-col footer-col-left">
@@ -193,8 +190,6 @@
         <div class="footer-map">
           <iframe
             src="https://www.google.com/maps?q=5+Papanui+Road,+Christchurch,+New+Zealand&output=embed"
-            width="100%"
-            height="180"
             style="border:0;"
             allowfullscreen=""
             loading="lazy"
@@ -218,4 +213,6 @@
       <p class="footer-hours">Opening Hours<br>9:00AM – 5:00PM</p>
     </div>
   </div>
-</footer>
+  </footer>
+</body>
+</html>
